<resources>
    <string name="app_name">boligchecker</string>
    <string name="how_to_rent">How to lease in Denmark</string>
    <string name="how_to_contract">How to write a contract</string>
    <string name="move_out">Move out</string>
    <string name="legal_aid">Legal aid</string>
    <string name="rent_process_content">
<![CDATA[

<p>Finding a satisfying room/house is not easy in Denmark. So get prepared and follow the steps below.</p>

<p><b>
<ol>
<li>1. Find a room/house in websites</li>
<li>2. Message to landlord</li>
<li>3. Visit the house for viewing</li>
<li>4. Check facilities with the landlord</li>
<li>5. Write a contract upon agreements of both landlord and you</li>
</ol></b></p>


<p>Those steps seem very natural and nothing to worry about.
However, various different types of scam may hook you up at one careless moment.</p>

<h3>1. Find a room/house in websites</h3>
<p>In Denmark, it is very common to find a room/house online.
Majority of Danish renting sites require you to pay for the service after few days of a trial period, while several house-renting groups at Facebook are free of charge.
It is good to be careful that if you are not cancel their trial on time, you are automatically bound to subscribe.
Usually, contacting to a landlord in Facebook is an easy and inexpensive way to find a room, however frauds dwell in an easy place, so you must secure yourself.</p>

<p>Choose a neighbourhood as safe as possible. In a few places, Danish gangsters possess guns and gang crimes happen often than you think.<br>
Choose a neighbourhood close to your work/school because transportation fare is expensive in Denmark.</p>


<b>Lists of major online rent sites.</b>
<ul>
<li><a href="http://www.boligportal.dk">http://www.boligportal.dk </a> </li>
<li><a href="https://www.danmarkbolig.dk">https://www.danmarkbolig.dk </a></li>
<li><a href="https://www.boligdeal.dk ">https://www.boligdeal.dk </a></li>
<li><a href="https://www.nordeaejendomme.dk "> https://www.nordeaejendomme.dk </a>(Lease for entire apartments. Make a contract with a company instead of a private landlord.)</li><ul>


<p> <font color="#C60C30"> <b>#</b> </font> Low price room without eligible address registration is not recommended.
Paying extra money only for address registration is not recommended.
All are ways of tax evasion. Since it is illegal, your residence right is insecure and officially you cannot get help.</p>

<h3>2. Message to landlord</h3>
<p>Tidy and neat self-introduction is a good start of the room hunting process.
Before making a viewing plan, make sure name of a landlord is the same as the person you are talking with.
Sub-letting without permission of landlord is outlawed.
Moreover, you cannot register the address for your residence without permission of the landlord.
Double and triple check if you are talking with the landlord.</p>

<p><em><b>In this app, you can check landlord\'s name by simply entering an address.</b></em> (Information from <a href="http://Boligejer.dk "> http://Boligejer.dk</a>)<br>
Go to My page - Fast safety check.</p>

<h3>3. Visit the house for viewing</h3>
<p>Keep in mind that you never pay for viewing since this is a typical way of scam.
Another classic fraud is that the landlord wants to send a house key to you saying he is busy or that he is in another country.
Do not send any money before you have meet the landlord and sign a contract.</p>

<p>More info at<br>
<a href="http://housingfoundation.ku.dk/finding_housing_yourself/dont-get-scammed"> http://housingfoundation.ku.dk/finding_housing_yourself/dont-get-scammed</a><p>

<h3>4. Check facilities with the landlord</h3>
<p>Checking the lease conditions at first place and discuss it with the landlord is the most crucial step.</p>

<p>According to Danish Rent Act (check details below), the landlord must provide the tenant\'s lease in a good and proper condition at the agreed time and throughout the rental period.
The lease must be cleaned, the windows must be well maintained and all exterior doors must be fitted with lockable locks with keys.</p>
<p>There are no other specific acts in the Danish Rent Act on every other facilities in a room,
but this generally means the rented accommodation must be equipped with well functioning household appliances such as heating, water supply, and internet.</p>

<b><font color="#C60C30">IMPORTANT</fond></b><br>
<p><b>Unfortunately, it is very common in Denmark that you cannot get 100% deposit back due to maintenance costs.</b>
Disputes often arise when you move out and you may be invoiced big amount of krone.
<b>You MUST take detailed pictures, make a written notice of defects, and agree with the landlord within 14 days after you have received the key.</b>
If the landlord has an e-mail address, you can also send the list. There is no requirement that the landlord must recognize the email.</p>

<p><em><b>In this app, taking pictures and generating a list of defects is available.</b></em><br>
Go to My page - Room - Room manager/Checklist</p>

<p>If there are serious shortcomings in the lease so that you can not live in the place, claim a refund for the rent at the time the lease is uninhabitable.
You may be able to cancel the lease if the landlord does not immediately remedy the shortcomings.</p>

<p>To avoid unnecessary invoice, it is good to know both landlord\'s and tenant\'s maintenance obligation.
According to Danish Rent Acts, a tenant have only one maintenance obligation in their lease which is maintain or renew locks and keys,
while the landlord has obligations to both internal and external maintenance.</p>
<p>Internal maintenance includes whitening, painting, wallpapering and painting of floors in the lease.
All other maintenance than internal maintenance is considered as external maintenance.</p>

<p>However, if the tenant has agreed to the responsibility to carry out the internal maintenance on the contract, at the termination of the tenancy,
the tenant must return the property in the same condition as it was at the beginning of the tenancy.
This means that before moving out the tenant must carry out the maintenance of the ceilings, walls, floors etc.
Any damage caused by fair wear and tear and lapse of time is not obligated to remedy.</p>



<p>Meanwhile, the landlord must maintain the part of the property\'s external maintenance consisting of roof, ceiling, facades, windows, entrance door, gates, stairs, basements, gallstones, pipes, cables and other supply installations.
In short, the landlord cannot force you to maintain things that you do not have access to in your home.</p>

<p>Contact the LLO as soon as possible if you do not agree with the requirements your landlord is asking.
Please be aware that the context is partially quoted from Danish Rent Acts.
For detailed info, please read through links below.</p>



<p><b>Danish Rent Acts</b><br>
<a href="http://llo.dk/lejeloven-a-z"> http://llo.dk/lejeloven-a-z</a><br>
<a href="https://www.retsinformation.dk/forms/r0710.aspx?id=173642">https://www.retsinformation.dk/forms/r0710.aspx?id=173642</a></p>


<h3>5. Write a contract</h3>
<p>Refer next chapter \"How to write a contract\"</p>


<p><b>More info at</b><br>
<a href="https://lifeindenmark.borger.dk/Coming-to-Denmark/Housing">https://lifeindenmark.borger.dk/Coming-to-Denmark/Housing</a><br>
<a href="https://international.kk.dk/artikel/housing-1">https://international.kk.dk/artikel/housing-1</a></p>

]]>
</string>
    <string name="my_side">My Page</string>
    <string name="home">Home</string>
    <string name="rent_process">Rent Process</string>
    <string name="contract">Contract</string>
    <string name="setting">Setting</string>
    <string name="address_line">Enter address line </string>
    <string name="address_post">Enter post code </string>
    <string name="address_city">Enter city name </string>
    <string name="landlord">Enter landlord name </string>
    <string name="lease_length">Enter lease length </string>
    <string name="notice">Enter notice period</string>
    <string name="monthly_rent">Enter monthly rent </string>
    <string name="deposit">Enter deposit</string>
    <string name="kr">Kr</string>
    <string name="months">months</string>
    <string name="language">Language setting</string>
    <string name="danish">Danish</string>
    <string name="norwegian">Norwegian</string>
    <string name="english">English</string>
    <string name="save">Save</string>
    <string name="fast_check_button">Must check basic info first to avoid scam</string>
    <string name="room_picture_button">Save your room pictures and fill up a check list</string>
    <string name="contract_button">Create a contract and check all small details</string>
    <string name="room">Room</string>
    <string name="fast_safety_check">Fast Safety Check</string>
    <string name="fc_address">Enter the full address</string>
    <string name="fc_name">Enter the landlord name</string>
    <string name="fc_info">Data has been imported from https://boligejer.dk</string>
</resources>