<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

<LinearLayout

android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
    android:id="@+id/address_line"
    android:hint="@string/address_line"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/address_post"
        android:hint="@string/address_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/address_city"
        android:hint="@string/address_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/landlord"
        android:hint="@string/landlord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <EditText
        android:id="@+id/lease_length"
        android:hint="@string/lease_length"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        <TextView
            android:text="@string/months"
            style="@style/EditorUnitsStyle"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <EditText
        android:id="@+id/notice"
        android:hint="@string/notice"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        <TextView
            android:text="@string/months"
            style="@style/EditorUnitsStyle"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <EditText
        android:id="@+id/monthly_rent"
        android:hint="@string/monthly_rent"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        <TextView
            android:text="@string/kr"
            style="@style/EditorUnitsStyle"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <EditText
        android:id="@+id/deposit"
        android:hint="@string/deposit"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/kr"
        style="@style/EditorUnitsStyle"/>
    </LinearLayout>


</LinearLayout>
    </ScrollView>