<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">



    <EditText
        android:id="@+id/fast_check_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/fc_address"/>

    <EditText
        android:id="@+id/check_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/fc_name"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <CheckBox
        android:id="@+id/fast_check_checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CheckBox" />

    <CheckBox
        android:id="@+id/fast_check_checkBox2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CheckBox" />

    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Check" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/fast_check_pass"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:src="@mipmap/ic_launcher"
        android:layout_centerHorizontal="true"
        />

    <ImageView
        android:id="@+id/fast_check_fail"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:visibility="invisible"
        />
    </RelativeLayout>

<ScrollView
    android:layout_gravity="center_horizontal"
    android:layout_width="300dp"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/fast_check_result"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>
</ScrollView>

    <WebView
        android:id="@+id/fast_check_webview_result"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

<TextView
    android:layout_gravity="center_horizontal"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:textColor="@color/colorPrimary"
    android:text="@string/fc_info"/>





</LinearLayout>